regression/parse_pool/progtest1.sfp.out

sfc in program parse_pool/progtest1.sfp
syntax error at line 2, position 7:
hello { test_blink() nullNet() nullMac() nullRadio() } 
      ^
