regression/parse_pool/progtest1.sfp
# Testing erroneous program definition (missing configuration keyword)
hello { test_blink() nullNet() nullMac() nullRadio() } 
start hello

